# weather_forecast_app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  pytest.ini  redis.conf  requirements.txt
app/: main.py
app/api/: dependencies.py
app/api/routers/: users.py  weather.py
app/clients/open_weather_map/: client.py  parsers.py
app/core/: auth.py  config.py  lifespan.py  logger.py  security.py
app/crud/: users.py
app/database/: connection.py  dependencies.py
app/middleware/: logging_middleware.py
app/models/: users.py
app/schemas/: forecast_schemas.py  owm_schemas.py  tokens.py  users.py
app/services/: users.py  weather.py
app/utils/: app_exceptions.py  converters.py
frontend/: index.html
frontend/css/: style.css
frontend/js/: login_user.js  main.js  profile_user.js  registration_user.js  token.js  weather.js
tests/: conftest.py
tests/json/: owm_response_example.json
tests/test_api/: conftest.py
tests/test_api/test_routers/: test_api_routers_users.py  test_api_routers_weather.py
tests/test_clients/: conftest.py
tests/test_clients/test_open_weather_map/: test_open_weather_map_client.py  test_open_weather_map_parsers.py
tests/test_clients/test_open_weather_map/json/: forecast_example.json
tests/test_crud/: conftest.py  test_crud_users.py
tests/test_services/: conftest.py  test_services_users.py  test_services_weather.py
